# cpd

./: .appveyor.yml  .astylerc  .clang-format  .gitignore  .projections.json  .travis.yml  CHANGES.md  CMakeLists.txt  CPDConfig.cmake.in  Doxyfile.in  README.md  RELEASE.md  STYLE.md  Vagrantfile  affine_8hpp.html  affine_8hpp_source.html  all_8hpp.html  all_8hpp_source.html  annotated.html  base_8hpp.html  base_8hpp_source.html  classcpd_1_1_affine-members.html  classcpd_1_1_affine.html  classcpd_1_1_comparer-members.html  classcpd_1_1_comparer.html  classcpd_1_1_direct_comparer-members.html  classcpd_1_1_direct_comparer.html  classcpd_1_1_fgt_comparer-members.html  classcpd_1_1_fgt_comparer.html  classcpd_1_1_gauss_transform-members.html  classcpd_1_1_gauss_transform.html  classcpd_1_1_gauss_transform_direct-members.html  classcpd_1_1_gauss_transform_direct.html  classcpd_1_1_gauss_transform_fgt-members.html  classcpd_1_1_gauss_transform_fgt.html  classcpd_1_1_nonrigid-members.html  classcpd_1_1_nonrigid.html  classcpd_1_1_normalization-members.html  classcpd_1_1_normalization.html  classcpd_1_1_registration-members.html  (+88 more)
.github/workflows/: build.yml
cli/: CMakeLists.txt  cpd.cpp
cmake/: Config.cmake.in  CpdConfig.cmake.in  FindARPACK.cmake  FindFigtree.cmake  Findgflags.cmake  configure_target.cmake  cpd-config.cmake  cpd-config.cmake.in  cpd_test.cmake
components/jsoncpp/: CMakeLists.txt
components/jsoncpp/include/cpd/: jsoncpp.hpp
components/jsoncpp/src/: jsoncpp.cpp
components/jsoncpp/tests/: CMakeLists.txt  jsoncpp.cpp
doc/: cmake-style-guide.md  release-guide.md
doc/release-notes/: v0.2.0.md  v0.2.1.md  v0.2.2.md
docs/: Doxyfile.in  namespace.dox
example/: CMakeLists.txt  README.md  X.txt  Y.txt  main.cpp
examples/: CMakeLists.txt  artificial-displacement.cpp  callback.cpp  fgt.cpp  random.cpp  rigid.cpp  transform.cpp  version.cpp
include/: CMakeLists.txt
include/cpd/: CMakeLists.txt  affine.hpp  affinity_eigenvectors.hpp  affinity_matrix.hpp  all.hpp  comparer.hpp  debug.hpp  defaults.hpp  exceptions.hpp  figtree.hpp  find_P.hpp  gauss_transform.hpp  gauss_transform_fgt.hpp  logging.hpp  matrix.hpp  nonrigid.hpp  nonrigid_lowrank.hpp  normalization.hpp  normalize.hpp  probabilities.hpp  registration.hpp  result.hpp  rigid.hpp  runner.hpp  sigma2.hpp  spdiag_locations.hpp  transform.hpp  utils.hpp  version.hpp
include/cpd/comparer/: base.hpp  default.hpp  direct.hpp  fgt.hpp
include/cpd/registration/: base.hpp  nonrigid.hpp  nonrigid_lowrank.hpp  normalization.hpp  result.hpp  rigid.hpp
make/: dependencies.mak  travis.mak
scripts/: build_and_test.sh  coveralls.sh  gh-pages.sh  install_armadillo.sh  install_cmake.sh  install_compilers.sh  install_figtree.sh  install_gflags.sh  travis-install-cmake.sh  travis-install-doxygen.sh  travis-install-eigen3.sh  travis-install-fgt.sh  travis-install-jsoncpp.sh  travis-script.sh
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+25 more)
src/: CMakeLists.txt  affine.cpp  affinity.cpp  affinity.hpp  affinity_eigenvectors.cpp  affinity_eigenvectors.hpp  affinity_matrix.cpp  affinity_matrix.hpp  comparer.cpp  debug.hpp  exceptions.hpp  figtree.hpp  find_P.cpp  find_P.hpp  gauss_transform.cpp  gauss_transform_fgt.cpp  gauss_transform_make_default.cpp  matrix.cpp  nonrigid.cpp  nonrigid_lowrank.cpp  normalization.cpp  normalization.hpp  normalize.cpp  probabilities.cpp  probability_calculator.cpp  probability_calculator.hpp  registration.cpp  registration_impl.hpp  rigid.cpp  sigma2.cpp  sigma2.hpp  spdiag_locations.hpp  transform.cpp  transformer.cpp  transformer.hpp  utils.cpp  utils.hpp  version.cpp.in
src/comparer/: base.cpp  direct.cpp  fgt.cpp
src/registration/: base.cpp  nonrigid.cpp  nonrigid_lowrank.cpp  rigid.cpp
test/: CMakeLists.txt  affine.cpp  affine_test.cpp  affinity.cpp  affinity_eigenvectors_test.cpp  affinity_matrix.cpp  affinity_matrix_test.cpp  arma_32bit_test.cpp  arma_64bit_test.cpp  comparer.cpp  config.cpp  config.hpp.in  exceptions_test.cpp  find_P_test.cpp  fixtures.hpp  nonrigid.cpp  nonrigid_lowrank_test.cpp  nonrigid_test.cpp  normalization_test.cpp  normalize.cpp  probabilities.cpp  registration_test.cpp  rigid.cpp  rigid_test.cpp  runner.cpp  sigma2_test.cpp  support.hpp.in  utils.cpp  utils_test.cpp  version.cpp  version_test.cpp
test/comparer/: base.cpp  common.hpp  direct.cpp  fgt.cpp
test/data/: 140712_064332_nonrigid_lowrank.txt  140712_064332_rigid.txt  README.md  face.csv  fish-G.txt  fish-correspondence.csv  fish-nonrigid-3-3.txt  fish.txt  utm.txt
test/issues/: 41-rigid-transformation.cpp
test/performance/: CMakeLists.txt  fixtures.hpp  nonrigid_lowrank_performance_test.cpp  rigid_performance_test.cpp  timer.cpp  timer.hpp
test/registration/: nonrigid_lowrank_test.cpp  nonrigid_test.cpp  rigid_test.cpp
tests/: CMakeLists.txt  affine.cpp  gauss_transform.cpp  gauss_transform_fgt.cpp  nonrigid.cpp  normalization.cpp  rigid.cpp  support.hpp.in  utils.cpp  version.cpp
tests/fixtures/: face.hpp  face_distorted.csv  fish.csv  fish.hpp  fish_distorted.csv  helheim.csv  helheim.hpp
